# miruku

./: .env.example  .gitignore  README.md  makefile  migrate_qdrant.py  pyproject.toml  requirements.txt
notebooks/: test_nlp.ipynb
src/: app.py  bot.py
src/model/: agent.py  prompt.py
src/parse/: anime.gql  cli.py  client.py  logger.py  pipeline.py
src/tools/: qdrant_search.py  shikimori_ongoings.py  sql_search.py  vector_db_search.py  web_search.py
